# PiClock

./: .gitignore  ApiKeys.py  Config.py  UpdatePlan.md  pyproject.toml  startup.sh
Clock/: PyQtPiClock.py
backend/: config.py  main.py  models.py  radar.py  radar_render.py  weather.py
backend/static/: icons-darkblue  icons-darkgreen  icons-lightblue  images
backend/static/css/: clock.css
backend/static/js/: app.js  clock.js  radar.js
backend/templates/: forecast_fragment.html  index.html  weather_fragment.html
backend/tests/: test_config.py  test_radar_render.py  test_weather.py
display/: __init__.py  __main__.py  client.py  data.py  diorama.py  ui.py
legacy/Clock/: PyQtPiClock.py
tests/: test_radar.py  test_radar_render.py  test_weather.py
