[project]
name = "piclock"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "astral>=3.2",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "metar>=2.0.1",
    "pillow>=10.4.0",
    "pygame-ce>=2.5.2",
    "sse-starlette>=3.3.4",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]

# piwheels hosts prebuilt armv7l wheels for Pi users (Pillow, pygame-ce, etc.).
# macOS/Linux-x86 users still get PyPI wheels — piwheels is only consulted as
# a fallback, and PyPI is preferred when both provide a compatible wheel.
[[tool.uv.index]]
name = "piwheels"
url = "https://www.piwheels.org/simple/"
default = false
