[project]
name = "piclock"
version = "0.1.0"
# Pi OS Trixie ships Python 3.13 natively; macOS is whatever's available.
requires-python = ">=3.11"
# Lean runtime: pygame for rendering, httpx for the two APIs we hit
# (Open-Meteo, RainViewer, NWS alerts, optional METAR), astral for moon
# phase, metar for METAR parsing. No HTTP server, no templating, no
# validation layer — the UI consumes plain Python dicts/dataclasses.
dependencies = [
    "astral>=3.2",
    "httpx>=0.28.1",
    "metar>=2.0.1",
    "pygame-ce>=2.5.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

# Pi users: piwheels hosts prebuilt armv7l/aarch64 wheels that avoid
# compiling pygame from source. Invoke sync like:
#
#   uv sync --extra-index-url https://www.piwheels.org/simple/
#
# Intentionally not listed here — a project-level piwheels index forces
# uv to consider it on macOS too, where it breaks resolution.
